Fixed text overflow in various views
Fixes #669

--- a/resources/assets/sass/_lists.scss
+++ b/resources/assets/sass/_lists.scss
@@ -412,8 +412,6 @@ ul.pagination {
     line-height: 1.2;
     color: #009688;;
     text-decoration: none;
-    white-space: pre-wrap; /* css-3 */
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
   }
   p {
     font-size: .85em;
